# Smart-Trade-MCP

./: .env.example  .gitignore  .mcp.json  AI_DRIVEN_SYSTEM.md  AUTONOMOUS_AGENT.md  AUTONOMOUS_AGENT_COMPLETE.md  CLAUDE_CODE_SETUP.md  CLAUDE_DESKTOP_QUICKSTART.md  CLAUDE_TEST_GUIDE.md  CLAUDE_USAGE_GUIDE.md  CLEANUP_SUMMARY.md  CORRELATION_REBALANCING.md  CORREÇÃO_ESTRATEGIAS.md  DASHBOARD_FINAL_INSTRUCTIONS.md  DOCUMENTO_TRANSFERENCIA.md  DYNAMIC_PAIR_MANAGEMENT.md  END_TO_END_REAL_TEST.md  ESTRATEGIAS_38_DOCUMENTACAO_COMPLETA.md  EXECUTIVE_SUMMARY.md  FASE_1_100_COMPLETA.md  FASE_1_COMPLETA.md  FASE_1_GPU_COMPLETA.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FRONTEND_SETUP.md  GPU_FULL_ACCELERATION_COMPLETO.md  GUIA_RAPIDO_CORRECAO.md  HARDCODED_ISSUES.txt  Heritage.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  MCP_CONNECTION_STATUS.md  NEXT_STEPS.md  PROGRESS_REPORT.md  PROXIMOS_PASSOS.md  README.md  REGIME_DETECTION_COMPLETE.md  RELATORIO_FINAL_38_ESTRATEGIAS.md  RELATORIO_FINAL_ANTES_DEPOIS.md  RELATORIO_FINAL_BACKTEST.md  (+83 more)
config/: agent_config.yaml
data/market/binance/: BTC_USDT_1h.db  ETH_USDT_1h.db  SOL_USDT_1h.db  SOL_USDT_5m.db
docs/: MCP_INTEGRATION.md  VALIDATION.md
examples/: __init__.py  benchmark_gpu_vs_cpu.py  benchmark_simple.py  list_strategies.py  simple_backtest.py  walk_forward_example.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  App_TEMP.tsx  index.css
frontend/src/components/: BotModal.tsx  BotsList.tsx  MoneyFlowChart.tsx  TradingChart.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/pages/: PaperDashboard.tsx
scripts/: analyze_hardcoded.py  attach_pids.py  auto_fix_strategies.py  check_all_strategies.py  complete_strategy_metadata.py  dump_agents.py  final_verification.py  find_agents_dbs.py  fix_all_strategies.py  fix_encoding.py  generate_all_strategies.py  generate_strategies.py  implement_top_strategies.py  import_agents_from_other_db.py  inspect_agents.py  migrate_strategies.py  quick_fix_remaining.py  quick_test_portfolio.py  register_strategies.py  simple_fix_all.py  test_experiment_manager.py  test_portfolio_api.py  test_scanner_api.py  ultimate_fix_all.py  verify_strategies.py
src/: __init__.py
src/agent/: __init__.py  agent_storage.py  config.py  orchestrator.py  pair_management.py  scheduler.py  signal_scanner.py  signal_storage.py  trading_agent.py
src/api/: config.py  main.py
src/core/: BACKTEST_ENGINE.md  __init__.py  backtest_engine.py  cli_dashboard.py  config.py  data_manager.py  database.py  gpu_utils.py  indicators.py  indicators_gpu.py  logger.py  regime_detector.py  rich_utils.py
src/experiments/: database.py  manager.py
src/mcp_server/: __init__.py  server.py
src/optimization/: __init__.py  all_parameter_spaces.py  config.py  fitness_evaluator.py  generated_parameter_spaces.py  genetic_optimizer.py  job_manager.py  logging_utils.py  meta_learner.py  parameter_space.py  ray_batch_evaluator.py  walk_forward_analyzer.py  walk_forward_config.py  walk_forward_dashboard.py  walk_forward_results.py
src/paper/: broadcaster.py
src/portfolio/: __init__.py  portfolio_config.py  portfolio_optimizer.py
src/strategies/: __init__.py  base.py  macd_strategy.py  registry.py  rsi_strategy.py  volume_shooter_strategy.py
tests/: quick_test_meta_learner.py  test_end_to_end.py
tests/integration/: test_mcp_server.py
tests/unit/: test_backtest_engine.py  test_database.py  test_indicators.py  test_new_indicators.py  test_strategies.py
(+34 files in other folders)
