[tool.poetry]
name = "smart-trade-mcp"
version = "0.1.0"
description = "Autonomous trading system with Model Context Protocol (MCP) architecture"
authors = ["Smart-Trade Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# MCP Core
mcp = "^1.0.0"

# Trading & Data
ccxt = "^4.2.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
# ta-lib = "^0.4.28"  # Optional: Install manually if needed (requires C libs on Windows)

# Optimization
optuna = "^3.5.0"
deap = "^1.4.1"
scikit-learn = "^1.4.0"

# GPU (Optional)
cupy-cuda12x = {version = "^13.0.0", optional = true}

# ML
torch = "^2.2.0"
joblib = "^1.3.0"

# Database
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"

# Utilities
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
loguru = "^0.7.2"

# API/Web
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.extras]
gpu = ["cupy-cuda12x"]

[tool.poetry.scripts]
smart-trade-mcp = "mcp_server.server:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
