[tool.poetry]
name = "smart-trade-mcp"
version = "3.1.0"  # Updated for autonomous agent
description = "Professional algorithmic trading platform with MCP integration, REST API, and autonomous agent"
authors = ["Smart-Trade Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# MCP Protocol
mcp = "^1.0.0"

# FastAPI Backend (v3.0.0)
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Trading & Data
ccxt = "^4.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
ta-lib = "^0.4.28"

# Optimization
deap = "^1.4.1"
scipy = "^1.11.0"

# Database
aiosqlite = "^0.19.0"

# Scheduler (Autonomous Agent)
apscheduler = "^3.10.4"
pyyaml = "^6.0.1"

# Optional: GPU Acceleration
cupy-cuda12x = {version = "^12.0.0", optional = true}

# Optional: Ray for parallel processing
ray = {version = "^2.8.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.10.1"
ruff = "^0.1.4"
mypy = "^1.6.1"

[tool.poetry.extras]
gpu = ["cupy-cuda12x"]
parallel = ["ray"]
all = ["cupy-cuda12x", "ray"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
